--- a/ArraySumBenchmark/ArraySumBenchmark.csproj
+++ b/ArraySumBenchmark/ArraySumBenchmark.csproj
@@ -8,6 +8,7 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
       <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+      <PlatformTarget>x64</PlatformTarget>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
